Fix grid alignment on shop page and update related styles

--- a/components/ImageGrid/image-grid.module.scss
+++ b/components/ImageGrid/image-grid.module.scss
@@ -35,7 +35,7 @@
   content: "";
   height: 12px;
   left: 0;
-  margin: 12px;
+  margin: 8px;
   position: absolute;
   top: 0;
   width: 12px;
